# scalatrix

./: CMakeLists.txt  LICENSE  pyproject.toml
build-wasm/: scalatrix.d.ts
examples/python/: consonance_example.py  midi_retune.py
include/: scalatrix.hpp
include/scalatrix/: c_api.h  consonance.hpp  label_calculator.hpp  mos.hpp  scale.hpp  spectrum.hpp
rust/: Cargo.toml
rust/examples/osc-receiver/: Cargo.toml
rust/examples/osc-receiver/src/: main.rs
rust/scalatrix/: Cargo.toml
rust/scalatrix-sys/: Cargo.toml  build.rs
rust/scalatrix-sys/src/: lib.rs
rust/scalatrix/src/: lib.rs
src/: c_api.cpp  consonance.cpp  label_calculator.cpp  linear_solver.cpp  main.cpp  mos.cpp  params.cpp  pitchset.cpp  python_bindings.cpp  scale.cpp  spectrum.cpp
