[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "scalatrix"
version = "1.0.0"
description = "Scalatrix music theory library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
# For cross-compilation, set CMAKE_OSX_ARCHITECTURES env var before building:
#   CMAKE_OSX_ARCHITECTURES=x86_64 uv pip install .
# Or use the wheel.macos.archs setting below

[tool.scikit-build.cmake.define]
BUILD_PYTHON = "ON"

# macOS deployment target for compatibility
[tool.scikit-build.cmake.define."CMAKE_OSX_DEPLOYMENT_TARGET"]
env = "MACOSX_DEPLOYMENT_TARGET"
default = "10.15"

# Architecture override via environment variable
[tool.scikit-build.cmake.define."CMAKE_OSX_ARCHITECTURES"]
env = "CMAKE_OSX_ARCHITECTURES"